--- a/shift-swap-v2/.gitignore
+++ b/shift-swap-v2/.gitignore
@@ -7,9 +7,10 @@
 /coverage
 
 # production
-/build
+# /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
@@ -19,3 +20,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
