--- a/shift-swap-v2/package.json
+++ b/shift-swap-v2/package.json
@@ -1,17 +1,17 @@
 {
-	"name": "react-template",
+	"name": "shift-swap",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
 		"axios": "^0.16.2",
 		"bcrypt": "^1.0.2",
 		"bcryptjs": "^2.4.3",
-		"body-parser": "^1.17.2",
+		"body-parser": "~1.18.2",
 		"connect-mongo": "^1.3.2",
 		"dotenv": "^4.0.0",
-		"express": "^4.15.3",
+		"express": "~4.16.2",
 		"express-session": "^1.15.4",
-		"mongoose": "^4.11.4",
+		"mongoose": "^5.0.1",
 		"morgan": "^1.8.2",
 		"passport": "^0.3.2",
 		"passport-google-oauth": "^1.0.0",
