--- a/shift-swap-v2/package.json
+++ b/shift-swap-v2/package.json
@@ -12,7 +12,7 @@
 		"express": "~4.16.2",
 		"express-session": "^1.15.4",
 		"mongoose": "^5.0.1",
-		"morgan": "^1.8.2",
+		"morgan": "~1.9.0",
 		"passport": "^0.3.2",
 		"passport-google-oauth": "^1.0.0",
 		"passport-google-oauth20": "^1.0.0",
@@ -26,11 +26,12 @@
 		"react-scripts": "1.0.7"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "export NODE_ENV=\"production\" && node server/server.js",
 		"build": "react-scripts build",
 		"test": "react-scripts test --env=jsdom",
 		"eject": "react-scripts eject",
 		"dev": "concurrently \"react-scripts start\" \"nodemon server/server.js\"",
 		"prod": "export NODE_ENV=\"production\" && nodemon server/server.js"
-	}
+	},
+	"proxy": "http://localhost:8080"
 }
