--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"dotenv": "^4.0.0",
 		"express": "~4.16.2",
 		"express-session": "^1.15.4",
+		"fullcalendar": "^3.8.2",
+		"jquery": "^3.3.1",
 		"mongoose": "^5.0.1",
 		"morgan": "~1.9.0",
 		"passport": "^0.3.2",
