--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"bcryptjs": "^2.4.3",
 		"body-parser": "~1.18.2",
 		"connect-mongo": "^1.3.2",
+		"courier-js": "^2.0.8",
 		"dotenv": "^4.0.0",
 		"express": "~4.16.2",
 		"express-session": "^1.15.4",
@@ -25,6 +26,7 @@
 		"passport-local": "^1.0.0",
 		"react": "^15.5.4",
 		"react-dom": "^15.5.4",
+		"react-html-email": "^3.0.0",
 		"react-router-dom": "^4.1.2"
 	},
 	"devDependencies": {
