--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"express-session": "^1.15.4",
 		"fullcalendar": "^3.8.2",
 		"jquery": "^3.3.1",
+		"moment": "^2.20.1",
 		"mongoose": "^5.0.1",
 		"morgan": "~1.9.0",
 		"nodemailer": "^4.6.0",
