--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"express": "~4.16.2",
 		"express-session": "^1.15.4",
 		"fullcalendar": "^3.8.2",
+		"invert-color": "^1.2.2",
 		"jquery": "^3.3.1",
 		"moment": "^2.20.1",
 		"mongoose": "^5.0.1",
